--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@ dev = [
     "requests>=2.31.0",
     "factory-boy>=3.3.0",
     "types-pyyaml>=6.0.12",
+    "pre-commit>=4.5.0,<5.0.0",  # Synced with Poetry group.dev.dependencies (^4.5.0)
 ]
 
 # Core node system dependencies
@@ -151,6 +152,7 @@ all = [
     "requests>=2.31.0",
     "factory-boy>=3.3.0",
     "types-pyyaml>=6.0.12",
+    "pre-commit>=4.5.0,<5.0.0",  # Synced with Poetry group.dev.dependencies (^4.5.0)
 ]
 
 # Ruff configuration - aligned with omnibase_core
@@ -218,6 +220,33 @@ ignore = [
     "RUF012",    # Mutable class default
     "ISC001",    # Implicit string concatenation (conflicts with formatter)
 ]
+
+[tool.ruff.lint.per-file-ignores]
+# PLC0415 (import-outside-toplevel): Allow imports inside functions in tests.
+# Common patterns requiring this:
+# - Module reloading/reset in test fixtures (importlib.reload)
+# - Pytest fixtures with deferred imports to avoid circular dependencies
+# - Test isolation requiring fresh module state
+# - Conditional imports based on test parameters
+#
+# Example patterns:
+#   def test_module_reload():
+#       import importlib
+#       from mymodule import config  # PLC0415 - deferred import for reload
+#       importlib.reload(config)
+#
+#   @pytest.fixture
+#   def fresh_handler():
+#       from mymodule import handler  # PLC0415 - fixture isolation
+#       yield handler
+#
+#   @pytest.mark.parametrize("use_async", [True, False])
+#   def test_conditional_import(use_async):
+#       if use_async:
+#           from mymodule import async_client as client  # PLC0415 - conditional
+#       else:
+#           from mymodule import sync_client as client   # PLC0415 - conditional
+"tests/**/*.py" = ["PLC0415"]
 
 [tool.ruff.format]
 quote-style = "double"
