refactor(OMN-456): Remove unused field aliases and deprecation timeline
Remove field aliases (timeout_seconds, circuit_breaker_timeout_seconds,
lease_timeout_seconds) that were never used in production code:

- Remove aliases from ModelIntelligenceConfig and ModelReducerConfig
- Remove backward compatibility tests for unused alias functionality
- Remove deprecation timeline entries for alias removal from migration guide
- Update all contracts to use canonical _ms field names
- Clean up NAMING_CONVENTIONS.md alias migration section

No external consumers used these aliases. Simplifies codebase by removing
dead code paths and unnecessary backward compatibility complexity.

--- a/src/omniintelligence/_legacy/nodes/intelligence_api_effect/v1_0_0/contracts/effect_contract.yaml
+++ b/src/omniintelligence/_legacy/nodes/intelligence_api_effect/v1_0_0/contracts/effect_contract.yaml
@@ -23,13 +23,13 @@ io_operations:
   - operation_type: api_call
     atomic: false
     backup_enabled: false
-    timeout_seconds: 30
+    timeout_ms: 30000
     validation_enabled: true
 
   - operation_type: http_request
     atomic: false
     backup_enabled: false
-    timeout_seconds: 30
+    timeout_ms: 30000
     validation_enabled: true
 
 # Transaction management
