--- a/src/omniintelligence/_legacy/nodes/intelligence_orchestrator/v1_0_0/contracts/workflows/relationship_detection.yaml
+++ b/src/omniintelligence/_legacy/nodes/intelligence_orchestrator/v1_0_0/contracts/workflows/relationship_detection.yaml
@@ -80,7 +80,7 @@ error_handling:
 
 # Performance settings
 performance:
-  timeout_seconds: 300
+  timeout_ms: 300000
   enable_caching: false  # Relationships change frequently
 
 # Monitoring
