--- a/src/omniintelligence/_legacy/nodes/intelligence_orchestrator/v1_0_0/contracts/workflows/document_ingestion.yaml
+++ b/src/omniintelligence/_legacy/nodes/intelligence_orchestrator/v1_0_0/contracts/workflows/document_ingestion.yaml
@@ -145,10 +145,10 @@ error_handling:
 
 # Performance settings
 performance:
-  timeout_seconds: 600
+  timeout_ms: 600000
   enable_caching: true
   cache_key_template: "doc_ingest:${input.document_id}"
-  cache_ttl_seconds: 300
+  cache_ttl_ms: 300000
 
 # Monitoring
 monitoring:
