--- a/src/omniintelligence/_legacy/nodes/postgres_pattern_effect/v1_0_0/contracts/effect_contract.yaml
+++ b/src/omniintelligence/_legacy/nodes/postgres_pattern_effect/v1_0_0/contracts/effect_contract.yaml
@@ -23,19 +23,19 @@ io_operations:
   - operation_type: database_write
     atomic: true
     backup_enabled: false
-    timeout_seconds: 30
+    timeout_ms: 30000
     validation_enabled: true
 
   - operation_type: database_query
     atomic: false
     backup_enabled: false
-    timeout_seconds: 30
+    timeout_ms: 30000
     validation_enabled: true
 
   - operation_type: database_update
     atomic: true
     backup_enabled: false
-    timeout_seconds: 30
+    timeout_ms: 30000
     validation_enabled: true
 
 # Transaction management
