--- a/src/omniintelligence/_legacy/nodes/qdrant_vector_effect/v1_0_0/contracts/effect_contract.yaml
+++ b/src/omniintelligence/_legacy/nodes/qdrant_vector_effect/v1_0_0/contracts/effect_contract.yaml
@@ -22,25 +22,25 @@ io_operations:
   - operation_type: upsert
     atomic: true
     backup_enabled: false
-    timeout_seconds: 30
+    timeout_ms: 30000
     validation_enabled: true
 
   - operation_type: search
     atomic: false
     backup_enabled: false
-    timeout_seconds: 30
+    timeout_ms: 30000
     validation_enabled: true
 
   - operation_type: delete
     atomic: true
     backup_enabled: false
-    timeout_seconds: 30
+    timeout_ms: 30000
     validation_enabled: true
 
   - operation_type: create_collection
     atomic: true
     backup_enabled: false
-    timeout_seconds: 60
+    timeout_ms: 60000
     validation_enabled: true
 
 # Transaction management
