feat(OMN-325): Add I/O audit test for ONEX node purity enforcement
Implement AST-based static analysis to enforce the "pure compute / no I/O"
invariant for ONEX nodes. This prevents nodes from directly importing
infrastructure clients or performing I/O operations.

Forbidden patterns detected:
- net-client: confluent_kafka, qdrant_client, neo4j, asyncpg, httpx, aiofiles
- env-access: os.environ, os.getenv, os.putenv
- file-io: open(), pathlib I/O methods, logging file handlers

Features:
- AST-based violation detection with clear file:line error messages
- YAML whitelist as source of truth for exceptions
- Inline pragma support (only for files in YAML whitelist)
- 45 comprehensive tests with TDD approach
- mypy --strict compliant

Files added:
- src/omniintelligence/audit/ - Core audit module
- tests/audit/ - Tests, fixtures, and whitelist config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -309,4 +309,5 @@ markers = [
     "integration: marks tests as integration tests",
     "performance: marks tests as performance benchmarks",
     "unit: marks tests as unit tests",
+    "audit: marks tests as I/O audit tests for node purity enforcement",
 ]
