--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -493,11 +493,54 @@ jobs:
             exit 1
           fi
 
+  # I/O Audit - ONEX node purity enforcement
+  # Validates compute nodes do not contain forbidden I/O patterns (network, env, file)
+  # Runs on all changes to catch purity violations early
+  io-audit:
+    name: I/O Audit
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          version: ${{ env.UV_VERSION }}
+
+      - name: Cache uv dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/uv
+          key: >-
+            uv-${{ runner.os }}-${{ env.PYTHON_VERSION }}-
+            ${{ hashFiles('**/uv.lock') }}-
+            ${{ env.CACHE_VERSION }}
+          restore-keys: |
+            uv-${{ runner.os }}-${{ env.PYTHON_VERSION }}-${{ hashFiles('**/uv.lock') }}-
+            uv-${{ runner.os }}-${{ env.PYTHON_VERSION }}-
+
+      - name: Install dependencies
+        run: uv sync --group dev --group core
+
+      - name: Run I/O audit
+        run: |
+          echo "Running ONEX node purity audit..."
+          uv run python -m omniintelligence.audit.io_audit \
+            --whitelist tests/audit/io_audit_whitelist.yaml
+
   # Summary job - aggregates all job results
   ci-summary:
     name: CI Summary
     runs-on: ubuntu-latest
-    needs: [changes, pre-commit, scope-alignment, lint, type-check, test-unit, contract-validation]
+    needs: [changes, pre-commit, scope-alignment, lint, type-check, test-unit, contract-validation, io-audit]
     if: always()
 
     steps:
@@ -509,6 +552,7 @@ jobs:
           typecheck="${{ needs.type-check.result }}"
           unittest="${{ needs.test-unit.result }}"
           contracts="${{ needs.contract-validation.result }}"
+          ioaudit="${{ needs.io-audit.result }}"
           production_code_changed="${{ needs.changes.outputs.production_code }}"
 
           # Status emoji mapping
@@ -575,6 +619,7 @@ jobs:
           echo "| Type Check | $(get_status_icon $typecheck) | \`$typecheck\` |" >> $GITHUB_STEP_SUMMARY
           echo "| Unit Tests | $(get_status_icon $unittest) | \`$unittest\` |" >> $GITHUB_STEP_SUMMARY
           echo "| Contract Validation | $(get_status_icon $contracts) | \`$contracts\` |" >> $GITHUB_STEP_SUMMARY
+          echo "| I/O Audit | $(get_status_icon $ioaudit) | \`$ioaudit\` |" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
 
           # Overall status - production code jobs can be skipped if no relevant changes
@@ -583,7 +628,8 @@ jobs:
              is_acceptable "$lint" "true" && \
              is_acceptable "$typecheck" "true" && \
              is_acceptable "$unittest" "true" && \
-             is_acceptable "$contracts" "false"; then
+             is_acceptable "$contracts" "false" && \
+             is_acceptable "$ioaudit" "false"; then
             echo "### :rocket: All CI checks passed!" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
             echo "Ready for review and merge." >> $GITHUB_STEP_SUMMARY
