--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,9 @@ dev = [
 ]
 
 # Core node system dependencies
+# NOTE: omnibase-infra is required for local development but is not published to PyPI.
+# Install it separately with: uv pip install -e /path/to/your/omnibase_infra
+# or add a local path dependency manually after cloning.
 core = [
     # ONEX ecosystem dependencies
     "omnibase-core>=0.7.0",
@@ -106,7 +109,9 @@ core = [
     "structlog>=23.1.0",
     "prometheus-client>=0.19.0",
     "psutil>=5.9.0",
-    "omnibase-infra @ file:///workspace/omnibase_infra3",
+    # NOTE: omnibase-infra is a local development dependency.
+    # Uncomment for local development with path to your omnibase_infra checkout.
+    # "omnibase-infra @ file:///workspace/omnibase_infra3",
 ]
 
 # All dependencies for development and testing
